--- a/html/BridgeScreenWidget_8cpp.html
+++ b/html/BridgeScreenWidget_8cpp.html
@@ -97,7 +97,10 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="textblock"><code>#include &lt;Wt/WText&gt;</code><br />
 <code>#include &lt;Wt/WLabel&gt;</code><br />
 <code>#include &lt;Wt/WTable&gt;</code><br />
+<code>#include &lt;Wt/WImage&gt;</code><br />
+<code>#include &lt;Wt/WTime&gt;</code><br />
 <code>#include &lt;Wt/WDialog&gt;</code><br />
+<code>#include &lt;Wt/WBorderLayout&gt;</code><br />
 <code>#include &lt;fstream&gt;</code><br />
 <code>#include &quot;BridgeScreenWidget.h&quot;</code><br />
 <code>#include &quot;Bridge.h&quot;</code><br />
