--- a/html/LightManagementWidget_8cpp.html
+++ b/html/LightManagementWidget_8cpp.html
@@ -109,6 +109,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <code>#include &lt;Wt/WMenu&gt;</code><br />
 <code>#include &lt;Wt/WStackedWidget&gt;</code><br />
 <code>#include &lt;Wt/WImage&gt;</code><br />
+<code>#include &lt;Wt/WBorderLayout&gt;</code><br />
 <code>#include &lt;Wt/Json/Value&gt;</code><br />
 <code>#include &lt;Wt/Json/Object&gt;</code><br />
 <code>#include &lt;Wt/Json/Parser&gt;</code><br />
