--- a/html/MainApplication_8cpp.html
+++ b/html/MainApplication_8cpp.html
@@ -98,6 +98,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <a href="#details">More...</a></p>
 <div class="textblock"><code>#include &lt;Wt/WApplication&gt;</code><br />
 <code>#include &lt;Wt/WServer&gt;</code><br />
+<code>#include &lt;Wt/WLink&gt;</code><br />
 <code>#include &lt;Wt/WBootstrapTheme&gt;</code><br />
 <code>#include &quot;WelcomeScreen.h&quot;</code><br />
 </div><table class="memberdecls">
